feat: add comprehensive performance optimization suite with async systems
- Add adaptive load balancer for intelligent task distribution and CPU utilization
- Add task smoothing scheduler to prevent performance spikes and maintain consistent throughput
- Add cache statistics tracking for monitoring and optimization insights
- Add async density cache manager for explosion calculation optimization
- Add TNT merge handler to reduce entity processing overhead
- Add async redstone network manager with panda wire evaluator for circuit optimization
- Add hopper optimization mixin to improve item transfer performance
- Add behavior throttle mixin for AI task rate limiting
- Add villager POI optimization to reduce pathfinding overhead
- Add decoration seed, slime chunk, and structure seed mixins for seed generation
- Add living entity travel optimization for movement calculation efficiency
- Add minecart tick optimization to reduce entity update frequency
- Add mob despawn optimization for entity cleanup performance
- Add primed TNT merge mixin to consolidate explosion calculations
- Add path batch flush mixin for pathfinding efficiency
- Add redstone wire optimization mixin for circuit evaluation
- Add batch POI manager for point-of-interest lookups
- Add seed command listener for world generation tracking
- Add spotbugs exclusion configuration for code quality analysis
- Update network optimization managers with improved congestion detection
- Update configuration with new optimization toggles and thresholds
- Update documentation with Pufferfish, Akarin, and tt20 project references
- Refactor crypto seed mixins into dedicated mixin classes for better maintainability
- Remove legacy secureseed mixin implementations in favor of new architecture

--- a/.gitignore
+++ b/.gitignore
@@ -115,5 +115,12 @@ gradle-app.setting
 run/
 runs/
 
+# Temporarily allow look/ for analysis
+look/
+docs/
+src/mixin/java/org/virgil/akiasync/mixin/crypto/quantum/
+src/main/java/org/virgil/akiasync/security/
+src/main/java/org/virgil/akiasync/crypto/
+
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
